--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="adicionarItem()" class="add-item">
+<form (ngSubmit)="editando ? editarItem() : adicionarItem()" class="add-item">
   <input type="text" name="item" placeholder="Digite o item que deseja adicionar" [(ngModel)]="valorItem">
-  <button type="submit">Salvar item</button>
+  <button type="submit">{{textoBtn}}</button>
 </form>
