--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="editando ? editarItem() : adicionarItem()" class="add-item">
+<form class="add-item" (ngSubmit)="editando ? editarItem() : adicionarItem()">
   <input type="text" name="item" placeholder="Digite o item que deseja adicionar" [(ngModel)]="valorItem">
   <button type="submit">{{textoBtn}}</button>
 </form>
